--- a/frontpage.html
+++ b/frontpage.html
@@ -7,6 +7,6 @@
       <input type="submit" value="Submit"><br><br>
     </form> 
     An image example:<br>
-    <img src="/flawed_data.png" alt="Please don't sue me Munroe I just needed an image.">
+    <img src="flawed_data.png" alt="Please don't sue me Munroe I just needed an image.">
   </body>
 </html>
