--- a/frontpage.html
+++ b/frontpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <form action="/example.php">
+    <form action="/example.html">
       <label for="example">A Form Example</label><br>
       <input type="text" id="example" name="example" value="Does it work?"><br>
       <input type="submit" value="Submit"><br><br>
