--- a/frontpage.html
+++ b/frontpage.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <form action="example.html">
+    <form action="TheRepoTofrWanted/example.html">
       <label for="example">A Form Example</label><br>
       <input type="text" id="example" name="example" value="Does it work?"><br>
       <input type="submit" value="Submit"><br><br>
     </form> 
     An image example:<br>
-    <img src="flawed_data.png" alt="Please don't sue me Munroe I just needed an image.">
+    <img src="flawed_data.png" alt="If the image doesn't appear, your browser doesn't use relative file calls!">
   </body>
 </html>
